--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion 29
@@ -23,6 +25,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //firebase
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-database:19.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -33,5 +38,20 @@ dependencies {
 
     // Gif Image View
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+
+//otp viewer
+    implementation 'com.github.aabhasr1:OtpView:1.0.6'
+//count down timer
+    implementation 'ir.samanjafari.easycountdowntimer:easycountdowntimer:2.1'
+
+    //stepview
+    implementation 'com.shuhart.stepview:stepview:1.5.0'
+
+    // fancy toast
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.6'
+
+    //aweesome dialogue
+    implementation 'com.github.blennerSilva:AwesomeDialog:2.0.6'
+
 
 }
