--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        
+        classpath 'com.google.gms:google-services:4.3.0'
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,7 +20,13 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://dl.bintray.com/samanjafaridotir/easyCountDownTimerTextview'
+        }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+
+
     }
 }
 
