--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.metacoders.hurrydriver">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:allowBackup="true"
@@ -11,21 +17,28 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ChooseVehicle"></activity>
+        <activity android:name=".Activity.ChooseVehicle"></activity>
         <activity android:name=".Activity.mobileVerifiacitonActivity" />
-        <activity android:name=".Driver_Licence_upload" />
-        <activity android:name=".Activity.remainingStepsActivity" />
-        <activity android:name=".Activity.signUpAcitivity" />
-        <activity android:name=".Activity.login_Activity">
+        <activity android:name=".Activity.Driver_Licence_upload_Activity" />
+        <activity android:name=".Activity.remainingStepsActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity.signUpAcitivity" />
+        <activity android:name=".Activity.login_Activity">
+
+        </activity>
         <activity android:name=".Activity.Acitivity_Choose_SignIn_Register" />
         <activity android:name=".HomePage" />
         <activity android:name=".MainActivity" />
+
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+
     </application>
 
 </manifest>
