--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.metacoders.hurrydriver">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
 
     <application
         android:allowBackup="true"
@@ -17,10 +11,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activity.ChooseVehicle"></activity>
+        <activity android:name=".ChooseYourVehicle"></activity>
+        <activity android:name=".Activity.ChooseVehicle" />
         <activity android:name=".Activity.mobileVerifiacitonActivity" />
         <activity android:name=".Activity.Driver_Licence_upload_Activity" />
-        <activity android:name=".Activity.remainingStepsActivity" >
+        <activity android:name=".Activity.remainingStepsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,17 +23,19 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.signUpAcitivity" />
-        <activity android:name=".Activity.login_Activity">
-
-        </activity>
+        <activity android:name=".Activity.login_Activity"></activity>
         <activity android:name=".Activity.Acitivity_Choose_SignIn_Register" />
         <activity android:name=".HomePage" />
         <activity android:name=".MainActivity" />
-
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
