--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.metacoders.hurrydriver">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,16 +18,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ChooseYourVehicle"></activity>
-        <activity android:name=".Activity.ChooseVehicle" />
-        <activity android:name=".Activity.mobileVerifiacitonActivity" />
-        <activity android:name=".Activity.Driver_Licence_upload_Activity" />
-        <activity android:name=".Activity.remainingStepsActivity">
+        <activity android:name=".ChooseYourVehicle"
+            android:theme="@style/AppThemee">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
+        </activity>
+        <activity android:name=".Activity.ChooseVehicle" >
+
+
+
+        </activity>
+        <activity android:name=".Activity.mobileVerifiacitonActivity" />
+        <activity android:name=".Activity.Driver_Licence_upload_Activity" />
+        <activity android:name=".Activity.remainingStepsActivity">
+
         </activity>
         <activity android:name=".Activity.signUpAcitivity" />
         <activity android:name=".Activity.login_Activity"></activity>
@@ -31,11 +49,5 @@
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
