--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -18,36 +17,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ChooseYourVehicle"
-            android:theme="@style/AppThemee">
-
-
-
-
-
-        </activity>
-        <activity android:name=".Activity.ChooseVehicle" >
-
-
-
-        </activity>
+        <activity android:name=".AmbulanceReg"></activity>
+        <activity android:name=".TruckReg" />
+        <activity android:name=".CarReg" />
+        <activity
+            android:name=".ChooseYourVehicle"
+            android:theme="@style/AppThemee" />
+        <activity android:name=".Activity.ChooseVehicle" />
         <activity android:name=".Activity.mobileVerifiacitonActivity" />
         <activity android:name=".Activity.Driver_Licence_upload_Activity" />
-        <activity android:name=".Activity.remainingStepsActivity">
-
-        </activity>
+        <activity android:name=".Activity.remainingStepsActivity" />
         <activity android:name=".Activity.signUpAcitivity" />
-        <activity android:name=".Activity.login_Activity"></activity>
+        <activity android:name=".Activity.login_Activity" />
         <activity android:name=".Activity.Acitivity_Choose_SignIn_Register" />
         <activity android:name=".Fragmnet.HomePageFragment" />
-        <activity android:name=".Activity.MainActivity" >
-
+        <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
