--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".CarPhotoUpload"></activity>
+        <activity android:name=".Activity.PickPhotoForUploadList">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Activity.uploadCarPicToServer"/>
         <activity android:name=".Activity.successFulBidList" />
         <activity android:name=".AmbulanceReg" />
         <activity android:name=".TruckReg" />
@@ -29,11 +36,7 @@
         <activity android:name=".Activity.mobileVerifiacitonActivity" />
         <activity android:name=".Activity.Driver_Licence_upload_Activity" />
         <activity android:name=".Activity.remainingStepsActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".Activity.signUpAcitivity" />
         <activity android:name=".Activity.login_Activity" />
