--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         </activity>
         <activity android:name=".Activity.signUpAcitivity" />
         <activity android:name=".Activity.login_Activity" />
-        <activity android:name=".Activity.Acitivity_Choose_SignIn_Register" >
+        <activity android:name=".Activity.Acitivity_Choose_SignIn_Register"
+            android:theme="@style/AppThemeNoAction">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,7 +45,8 @@
         <activity android:name=".Activity.Activity_Running_Bid_List" />
         <activity android:name=".Activity.Activity_On_UnsuccessfulBidList" />
         <activity android:name=".Activity.Activity_Bid_Page_Driver" />
-        <activity android:name=".Activity.MainActivity" />
+        <activity android:name=".Activity.MainActivity"
+            android:theme="@style/AppThemeeMaterialNoActionBar"/>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
