--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,12 @@ dependencies {
 
     // firebase ui
     implementation 'com.firebaseui:firebase-ui-database:5.1.0'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+
+    // navigation
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
 
 }
