--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".myApplicaiton"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -44,7 +45,8 @@
         <activity android:name=".Fragmnet.HomePageFragment" />
         <activity android:name=".Activity.Activity_Running_Bid_List" />
         <activity android:name=".Activity.Activity_On_UnsuccessfulBidList" />
-        <activity android:name=".Activity.Activity_Bid_Page_Driver" />
+        <activity android:name=".Activity.Activity_Bid_Page_Driver"
+            />
         <activity android:name=".Activity.MainActivity"
             android:theme="@style/AppThemeeMaterialNoActionBar"/>
         <activity
