--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,45 +10,55 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
+        android:name=".myApplicaiton"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".myApplicaiton"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppThemee"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activity.PickPhotoForUploadList">
+        <activity android:name=".Activity.SplashScreen"
+            android:theme="@style/AppThemee">
 
-        </activity>
-        <activity android:name=".Activity.uploadCarPicToServer"/>
-        <activity android:name=".Activity.successFulBidList" />
-        <activity android:name=".AmbulanceReg" />
-        <activity android:name=".TruckReg" />
-        <activity android:name=".CarReg" />
-        <activity android:name=".Activity.ChooseVehicle" />
-        <activity android:name=".Activity.mobileVerifiacitonActivity" />
-        <activity android:name=".Activity.Driver_Licence_upload_Activity" />
-        <activity android:name=".Activity.remainingStepsActivity">
-
-        </activity>
-        <activity android:name=".Activity.signUpAcitivity" />
-        <activity android:name=".Activity.login_Activity" />
-        <activity android:name=".Activity.Acitivity_Choose_SignIn_Register"
-            android:theme="@style/AppThemeNoAction">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".Activity.DriverStatusPage" />
+        <activity android:name=".Activity.PickPhotoForUploadList" />
+        <activity android:name=".Activity.uploadCarPicToServer" />
+        <activity android:name=".Activity.successFulBidList" />
+        <activity android:name=".AmbulanceReg" />
+        <activity android:name=".TruckReg" />
+        <activity android:name=".CarReg" />
+        <activity
+            android:name=".Activity.ChooseVehicle"
+            android:theme="@style/AppThemee" />
+        <activity android:name=".Activity.mobileVerifiacitonActivity" />
+        <activity android:name=".Activity.Driver_Licence_upload_Activity" />
+        <activity android:name=".Activity.remainingStepsActivity" />
+        <activity
+            android:name=".Activity.signUpAcitivity"
+            android:theme="@style/AppThemee" />
+        <activity android:name=".Activity.login_Activity" />
+        <activity
+            android:name=".Activity.Acitivity_Choose_SignIn_Register"
+            android:theme="@style/AppThemeNoAction">
+
+
+
         </activity>
         <activity android:name=".Fragmnet.HomePageFragment" />
         <activity android:name=".Activity.Activity_Running_Bid_List" />
         <activity android:name=".Activity.Activity_On_UnsuccessfulBidList" />
-        <activity android:name=".Activity.Activity_Bid_Page_Driver"
-            />
-        <activity android:name=".Activity.MainActivity"
-            android:theme="@style/AppThemeeMaterialNoActionBar"/>
+        <activity android:name=".Activity.Activity_Bid_Page_Driver" />
+        <activity
+            android:name=".Activity.MainActivity"
+            android:theme="@style/AppThemeeMaterialNoActionBar" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
