--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,14 +68,10 @@ dependencies {
 
     //compress library
     implementation 'id.zelory:compressor:2.1.0'
-
     // spinner library
     implementation 'com.github.tiper:MaterialSpinner:1.3.3'
-
     // firebase ui
     implementation 'com.firebaseui:firebase-ui-database:5.1.0'
-
-
     // navigation
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
@@ -86,4 +82,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
 
 
+    implementation 'net.danlew:android.joda:2.10.9'
 }
