--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.metacoders.hurrydriver">
+    package="com.hubit.hurrydriver">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-        android:name=".myApplicaiton"
+        android:name="com.hubit.hurrydriver.myApplicaiton"
         android:largeHeap="true"
         android:hardwareAccelerated="false"
         android:allowBackup="true"
@@ -20,10 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemee"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activity.Activity_Succesful_List"/>
-        <activity android:name=".Activity.TrpDetails"></activity>
+        <activity android:name="com.hubit.hurrydriver.Activity.Activity_Succesful_List"/>
+        <activity android:name="com.hubit.hurrydriver.Activity.TrpDetails"></activity>
         <activity
-            android:name=".Activity.SplashScreen"
+            android:name="com.hubit.hurrydriver.Activity.SplashScreen"
             android:theme="@style/AppThemee">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,32 +31,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.DriverStatusPage" />
-        <activity android:name=".Activity.PickPhotoForUploadList" />
-        <activity android:name=".Activity.uploadCarPicToServer" />
-        <activity android:name=".Activity.successFulBidList" />
-        <activity android:name=".AmbulanceReg" />
-        <activity android:name=".TruckReg" />
-        <activity android:name=".CarReg" />
+        <activity android:name="com.hubit.hurrydriver.Activity.DriverStatusPage" />
+        <activity android:name="com.hubit.hurrydriver.Activity.PickPhotoForUploadList" />
+        <activity android:name="com.hubit.hurrydriver.Activity.uploadCarPicToServer" />
+        <activity android:name="com.hubit.hurrydriver.Activity.successFulBidList" />
+        <activity android:name="com.hubit.hurrydriver.AmbulanceReg" />
+        <activity android:name="com.hubit.hurrydriver.TruckReg" />
+        <activity android:name="com.hubit.hurrydriver.CarReg" />
         <activity
-            android:name=".Activity.ChooseVehicle"
+            android:name="com.hubit.hurrydriver.Activity.ChooseVehicle"
             android:theme="@style/AppThemee" />
-        <activity android:name=".Activity.mobileVerifiacitonActivity" />
-        <activity android:name=".Activity.Driver_Licence_upload_Activity" />
-        <activity android:name=".Activity.remainingStepsActivity" />
+        <activity android:name="com.hubit.hurrydriver.Activity.mobileVerifiacitonActivity" />
+        <activity android:name="com.hubit.hurrydriver.Activity.Driver_Licence_upload_Activity" />
+        <activity android:name="com.hubit.hurrydriver.Activity.remainingStepsActivity" />
         <activity
-            android:name=".Activity.signUpAcitivity"
+            android:name="com.hubit.hurrydriver.Activity.signUpAcitivity"
             android:theme="@style/AppThemee" />
-        <activity android:name=".Activity.login_Activity" />
+        <activity android:name="com.hubit.hurrydriver.Activity.login_Activity" />
         <activity
-            android:name=".Activity.Acitivity_Choose_SignIn_Register"
+            android:name="com.hubit.hurrydriver.Activity.Acitivity_Choose_SignIn_Register"
             android:theme="@style/AppThemeNoAction"></activity>
-        <activity android:name=".Fragmnet.HomePageFragment" />
-        <activity android:name=".Activity.Activity_Running_Bid_List" />
-        <activity android:name=".Activity.Activity_On_UnsuccessfulBidList" />
-        <activity android:name=".Activity.Activity_Bid_Page_Driver" />
+        <activity android:name="com.hubit.hurrydriver.Fragmnet.HomePageFragment" />
+        <activity android:name="com.hubit.hurrydriver.Activity.Activity_Running_Bid_List" />
+        <activity android:name="com.hubit.hurrydriver.Activity.Activity_On_UnsuccessfulBidList" />
+        <activity android:name="com.hubit.hurrydriver.Activity.Activity_Bid_Page_Driver" />
         <activity
-            android:name=".Activity.MainActivity"
+            android:name="com.hubit.hurrydriver.Activity.MainActivity"
             android:theme="@style/AppThemeeMaterialNoActionBar" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
